# Java-Lua-Wrapper

./: .gitignore  README.md  build.gradle  bundle_install.sh  bundletool  gradle.properties  gradlew  settings.gradle
aab-app/: build.gradle  proguard-rules.pro
aab-app/src/main/: AndroidManifest.xml
aab-app/src/main/java/com/blockcheng/text/: MainActivity.java  MyApplication.java
aab-app/src/main/res/layout/: activity_aab_main.xml  activity_main.xml
aab-app/src/main/res/raw/: keep.xml
aab-app/src/main/res/values/: strings.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/java/: Dependencies.kt
buildSrc/src/main/java/util/: BuilConfigHelper.kt  CollectionExt.kt
dynamic_feature/: build.gradle
dynamic_feature/src/main/: AndroidManifest.xml
dynamic_feature/src/main/java/com/blockcheng/dynamic/: DFMObject.java  DFM_ActB.java  DFM_MainAct.java
dynamic_feature/src/main/res/layout/: activity_dfm_actb.xml  activity_dfm_main.xml
gradle/: base-plugin-dependencies.gradle  commons.gradle  library-project.gradle  plugin-dependencies.gradle  plugin-mvn.gradle
sdks/bm-luavm/: TODO  build.gradle
sdks/bm-luavm/src/main/: AndroidManifest.xml
sdks/bm-luavm/src/main/cpp/: CMakeLists.txt  Readme.md  deployAndroid.sh
sdks/bm-luavm/src/main/cpp/cmake_common/: CMakeLists.txt
sdks/bm-luavm/src/main/cpp/lua/: lapi.c  lauxlib.c  linit.c  llex.c  llimits.h  loslib.c  lstate.c  lstate.h  lstrlib.c  lua.h
sdks/bm-luavm/src/main/cpp/luasocket/: auxiliar.c  auxiliar.h  buffer.c  buffer.h  except.c  except.h  inet.c  inet.h  io.c  io.h  luasocket.c  luasocket.h  mime.c  mime.h  options.c  options.h  select.c  select.h  socket.h  tcp.c  tcp.h  timeout.c  timeout.h  udp.c  udp.h  unix.c  unix.h  usocket.c  usocket.h  wsocket.c  wsocket.h
sdks/bm-luavm/src/main/java/com/bytememo/lw/: BMLW.java
sdks/lua-vm-export/vibs/release/arm64-v8a/: libbm_lw.bb
sdks/lua-vm-export/vibs/release/armeabi-v7a/: libbm_lw.bb
sdks/luaInclude/: CMakeLists.txt  lua.hpp
sdks/luaInclude/lua/: lapi.c  lauxlib.c  lbaselib.c  ldebug.c  liolib.c  llex.c  loadlib.c  loslib.c  lparser.c  lstrlib.c  lua.h  luac.c  luaconf.h  lvm.c
sdks/luaInclude/tolua/: tolua++.h  tolua_map.c  tolua_push.c
